# lawdangle-kr

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.ko.md  README.md  pyproject.toml
examples/: analyze_xlsx.py  probe_api.py  sample_corpus.txt  webapp.py
src/lawdangle/: __init__.py  classifier.py  cli.py  mapper.py  models.py  parser.py  report.py  resolver.py
test/: test_classifier.py  test_live_api.py  test_mapper.py  test_parser.py  test_regression.py  test_resolver.py
test/fixtures/: deunggi.json  gongyusumyeon.json
