[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lawdangle-kr"
version = "0.1.1"
description = "Dead cross-reference detector for Korean statutes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "yabooung" }]
dependencies = ["requests"]   # 실제 쓰는 것만

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
lawdangle = "lawdangle.cli:main"   # CLI 명령 → 함수 연결

[project.urls]
Homepage = "https://github.com/yabooung/lawdangle-kr"
Repository = "https://github.com/yabooung/lawdangle-kr"
Issues = "https://github.com/yabooung/lawdangle-kr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lawdangle"]   # src 레이아웃 → import명 lawdangle

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "test",
    "examples",
    "README.md",
    "README.ko.md",
    "DESIGN.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["test"]
